--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/favicon/apple-touch-icon.png"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
     />
+
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon/favicon-32x32.png"
+      href="%PUBLIC_URL%/favicon-32x32.png"
     />
+
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/favicon/favicon-16x16.png"
+      href="%PUBLIC_URL%/favicon-16x16.png"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/favicon/site.webmanifest" />
+
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
@@ -35,17 +37,6 @@
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-
-      manifest.json provides metadata used when your web app is installed on a user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>Man Alive! eCommerce</title>
